<resources>
    <string name="app_name">Addicting Games</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="_19_99" translatable="false">$19.99</string>
    <string name="favorites">Favorites</string>
    <string name="price_lowest_to_high">Price: lowest to high</string>
    <string name="filters">Filters</string>
    <string name="library">Library</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="doesn_t_have_an_account_create_one">Doesn\'t have an account? Create one!</string>
    <string name="action" translatable="false">Action</string>
    <string name="cyberpunk_2077" translatable="false">Cyberpunk 2077</string>
    <string name="cd_projeck_red" translatable="false">CD Projeck Red</string>
    <string name="comment">Comment</string>
    <string name="support">Support</string>
    <string name="you_may_also_like_this">You may also like this</string>
    <string name="play_now">Play Now</string>
    <string name="password" translatable="false">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="categories">Categories</string>
    <string name="super_sale_cate">Super Sale</string>
    <string name="up_to_50_off">Up to 50% off</string>
    <string name="my_profile">My profile</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="change_style">Change Style</string>
    <string name="purchased_game">Purchased Game</string>
    <string name="change_language">Change Language</string>
    <string name="suitable_for_each_country">Suitable for each country</string>
    <string name="new_game">New</string>0
    <string name="sale">Sale</string>
    <string name="my_cart">My Cart</string>
    <string name="total_amount">Total Amount</string>
    <string name="my_coin">My Coin</string>
    <string name="coin_return">Coin Return</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="what_is_your_opinion">What is your opinion?</string>
    <string name="please_share_your_opinion_about_the_product">Please share your opinion about the product</string>
    <string name="send_review">Send review</string>
    <string name="super_sale">Super summer sale</string>
    <string name="view_all">View all</string>
    <string name="you_ve_never_seen_it_before">You’ve never seen it before!</string>
    <string name="checkout">Checkout</string>
    <string name="add_friend">Add Friend</string>
    <string name="new_friend">New Friend</string>
    <string name="games_played">Games Played</string>
    <string name="played_games">Played 12 games</string>
    <string name="profile">Profile</string>
</resources>
