<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_home_scene"
    tools:context=".ui.fragments.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="Home"
            app:titleTextColor="#FF0000" />

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/background_imageView"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        android:src="@drawable/cyberpunk20770_olto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/gradient_view"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@id/background_imageView"
        app:layout_constraintLeft_toLeftOf="@id/background_imageView"
        app:layout_constraintRight_toRightOf="@id/background_imageView"
        app:layout_constraintTop_toTopOf="@id/background_imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/buttonBackgroundTint"
        android:textColor="@color/white"
        android:fontFamily="@font/metropolis_bold"
        android:text="Check"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@id/background_imageView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/appName_textView"
        style="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/metropolis_black"
        android:text="Addicting Game"
        android:textColor="@color/textHomeColor"
        android:textSize="61sp"
        app:layout_constraintBottom_toTopOf="@+id/check_button"
        app:layout_constraintEnd_toEndOf="@id/background_imageView"
        app:layout_constraintStart_toStartOf="@+id/background_imageView" />

    <TextView
        android:id="@+id/sroll_appName_textView"
        style="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/metropolis_black"
        android:text="Addicting Game"
        android:textColor="@color/textHomeColor"
        android:textSize="37sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/background_imageView"
        app:layout_constraintEnd_toEndOf="@id/background_imageView"
        app:layout_constraintStart_toStartOf="@+id/background_imageView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor">


            <TextView
                android:id="@+id/sale_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/metropolis_bold"
                android:text="@string/sale"
                android:textColor="@color/titleColor"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="@id/home_constraintLayout"
                app:layout_constraintTop_toTopOf="@id/home_constraintLayout" />

            <TextView
                android:id="@+id/saleDescription_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_medium"
                android:text="@string/super_sale"
                android:textColor="@color/descriptionColor"
                app:layout_constraintStart_toStartOf="@+id/sale_textView"
                app:layout_constraintTop_toBottomOf="@+id/sale_textView" />

            <TextView
                android:id="@+id/sale_viewAll_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/metropolis_medium"
                android:text="@string/view_all"
                android:textColor="@color/descriptionColor"
                app:layout_constraintBottom_toBottomOf="@+id/sale_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sale_textView" />

            <com.todkars.shimmer.ShimmerRecyclerView
                android:id="@+id/saleGame_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saleDescription_textView"
                app:shimmer_recycler_layout="@layout/placeholder_module_row_layout" />

            <TextView
                android:id="@+id/new_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/metropolis_bold"
                android:text="@string/new_game"
                android:textColor="@color/titleColor"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="@+id/sale_textView"
                app:layout_constraintTop_toBottomOf="@+id/saleGame_recyclerView" />

            <TextView
                android:id="@+id/newDescription_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_medium"
                android:text="@string/you_ve_never_seen_it_before"
                android:textColor="@color/descriptionColor"
                app:layout_constraintStart_toStartOf="@+id/sale_textView"
                app:layout_constraintTop_toBottomOf="@id/new_textView" />

            <TextView
                android:id="@+id/new_viewAll_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/view_all"
                android:textColor="@color/descriptionColor"
                app:layout_constraintBottom_toBottomOf="@+id/new_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/new_textView" />

            <com.todkars.shimmer.ShimmerRecyclerView
                android:id="@+id/newGame_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newDescription_textView"
                app:shimmer_recycler_layout="@layout/placeholder_module_row_layout" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>