<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/search_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F9F9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/other_profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:titleTextColor="#fff">

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="106dp"
        android:layout_marginBottom="672dp"
        android:fontFamily="@font/metropolis_bold"
        android:gravity="top"
        android:text="@string/profile"
        android:textColor="@color/titleColor"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="584dp"
        android:background="@drawable/photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:src="@drawable/batman_hero_avatar_comics_512" />
    </FrameLayout>

    <TextView
        android:id="@+id/username_textView"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="164dp"
        android:layout_marginBottom="626dp"
        android:fontFamily="@font/metropolis_bold"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:maxLines="1"
        android:text="User"
        android:textColor="@color/titleColor"
        android:textSize="18sp"
        android:translationY="-2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/frameLayout2"
        app:layout_constraintTop_toTopOf="@+id/search_appbar"
        app:layout_constraintVertical_bias="0.5" />


    <TextView
        android:id="@+id/email_textView"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="215dp"
        android:layout_marginBottom="626dp"
        android:fontFamily="@font/metropolis_bold"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:maxLines="1"
        android:text="Email"
        android:textColor="@color/descriptionColor"
        android:textSize="18sp"
        android:translationY="-2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/frameLayout2"
        app:layout_constraintTop_toTopOf="@+id/search_appbar"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/coin_textView"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="265dp"
        android:visibility="invisible"
        android:layout_marginBottom="626dp"
        android:fontFamily="@font/metropolis_bold"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:maxLines="1"
        android:text="Coin"
        android:textColor="@color/textFocusColor"
        android:textSize="18sp"
        android:translationY="-2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/frameLayout2"
        app:layout_constraintTop_toTopOf="@+id/search_appbar"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin_textView"
        tools:layout_editor_absoluteX="0dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/favorites_game_layout"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gamehaving_layout"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/add_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/metropolis_bold"
                android:gravity="top"
                android:text="@string/add_friend"
                android:textColor="@color/titleColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_friends_sub_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="17dp"
                android:gravity="top"
                android:text="@string/new_friend"
                android:textColor="@color/descriptionColor"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/change_language_layout"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gamehaving_layout"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/played_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/metropolis_bold"
                android:gravity="top"
                android:text="@string/games_played"
                android:textColor="@color/titleColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/games_played_sub_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="17dp"
                android:gravity="top"
                android:text="@string/played_games"
                android:textColor="@color/descriptionColor"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>